# momok

./: pyproject.toml
common/: models.py
config/: settings.py  urls.py
restaurants/: admin.py  models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_restaurant_address_restaurant_best_and_more.py  0003_restaurant_restaurants_alter_restaurant_spicy.py  0004_remove_restaurant_restaurants.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_pricerange1_user_pricerange2_user_spicyok.py  0003_user_egg_user_phone.py  0004_alter_user_phone.py  0005_user_restaurants.py
